--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,10 @@
       <button class="btn btn-primary" (click)="onAddServer()">
         Add Server
       </button>
+      <br>
+      <h3>App status : {{appStatus | async }} </h3>
       <hr>
+
       <ul class="list-group">
         <li
           class="list-group-item"
